extends Control


func _on__pressed1() -> void:
	get_tree().change_scene_to_file("res://level_1_2.tscn")


func _on__pressed2() -> void:
	get_tree().change_scene_to_file("res://scenes/level_2.tscn")


func _on__pressed3() -> void:
	get_tree().change_scene_to_file("res://scenes/level 32.tscn")


func _on__pressed4() -> void:
	get_tree().change_scene_to_file("res://scenes/level_4.tscn")


func _on__pressed5() -> void:
	get_tree().change_scene_to_file("res://scenes/level_5.tscn")


func _on__pressed6() -> void:
	get_tree().change_scene_to_file("res://level_6.tscn")


func _on__pressed7() -> void:
	get_tree().change_scene_to_file("res://level_7_3.tscn")





func _on__pressed9() -> void:
	get_tree().change_scene_to_file("res://level_9.tscn")


func _on__pressed10() -> void:
	get_tree().change_scene_to_file("res://level_10.tscn")


func _on__pressed8() -> void:
	get_tree().change_scene_to_file("res://level_8.tscn")
